--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -11,8 +11,10 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
       crossorigin="anonymous"
     >
+    <link rel="stylesheet" href="/style.css" ></link>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito&display=swap" rel="stylesheet">
 
-    <title>Spotify Tools</title>
+    <title>Tools for Spotify</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
