--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -13,7 +13,7 @@
     >
     <link rel="stylesheet" href="/style.css" ></link>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito&display=swap" rel="stylesheet">
-
+    <!-- <script src="https://kit.fontawesome.com/1ea35bda0b.js" crossorigin="anonymous"></script> -->
     <title>Tools for Spotify</title>
   </head>
   <body>
