Add feature to copy one playlist to another
Also tweaked the frontend style, and renamed variables/methods in the backend
to be more clear.

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/style.css" ></link>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito&display=swap" rel="stylesheet">
     <!-- <script src="https://kit.fontawesome.com/1ea35bda0b.js" crossorigin="anonymous"></script> -->
-    <title>Tools for Spotify</title>
+    <title>Toolify</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
